--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header h1 {
 
 nav a {
   margin: 0 1em;
-  color: #eeeeee;
+  color: #d4af37
   text-decoration: none;
   font-weight: 600;
   transition: color 0.3s ease;
