--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a:hover {
 /* Hero section */
 .hero {
   height: 60vh;
-  background-image: url('images/project1.jpeg');
+  background-image: url('images/project11.jpeg');
   background-size: cover;
   background-position: center;
   position: relative;
@@ -135,11 +135,27 @@ nav a:hover {
   gap: 1em;
 }
 
-.project .images img {
+.image-item {
   width: calc(50% - 0.5em);
-  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.image-item img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  margin-bottom: 0.5em;
+}
+
+.image-item p {
+  font-size: 0.95em;
+  color: #555;
+  margin: 0;
 }
 
 /* Footer */
@@ -158,7 +174,7 @@ footer {
     align-items: center;
   }
 
-  .project .images img {
+  .image-item {
     width: 100%;
   }
 }
