--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ footer {
   position: fixed;
   z-index: 9999;
   top: 0; left: 0; width: 100%; height: 100%;
-  background: rgba(0,0,0,0.8);
+  background: rgba(22, 21, 21, 0.8);
   align-items: center;
   justify-content: center;
 }
